fix: 4th attempt (this works) to fix mobile open dialog not showing

--- a/src/styles.css
+++ b/src/styles.css
@@ -943,12 +943,12 @@ a {
 }
 
 /* Add Task modal */
-/* #addTaskDialog[open],
+#addTaskDialog[open],
 #addProjectDialog[open] {
   position: fixed;
   inset: 0 0 0 0;
   margin: auto;
-} */
+}
 
 #addTaskDialog,
 #addProjectDialog {
@@ -980,10 +980,9 @@ a {
 @media screen and (max-width: 25em) {
   #addTaskDialog,
   #addProjectDialog {
-    width: 100%;
+    width: 85%;
   }
 }
-
 
 #addTaskDialog::backdrop,
 #addProjectDialog::backdrop {
@@ -993,7 +992,6 @@ a {
 .form-section {
   max-height: calc(100vh - 1 * var(--modal-padding-top));
   width: 100%;
-  height: 100%;
   overflow: auto;
 }
 
